# Cpp_Qml

./: README.md
Cpp_excercise/books_management/: CMakeLists.txt  main.cpp
Qml_exercise/Expense_management/: CMakeLists.txt  Main.qml  main.cpp
